(fixing): validations menu
